--- a/home.html
+++ b/home.html
@@ -1,76 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="home.css">
-    <link href='https://fonts.googleapis.com/css?family=Quattrocento Sans' rel='stylesheet'>
-</head>
-<body>
+    <link rel="stylesheet" href="home.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quattrocento Sans"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Quattrocento"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <div class="con">
-        <nav class="navbar">
-            <div class="nav-container">
-                <div class="nav-brand">
-                    <a href="#" class="nav-logo"><img class="logo-kel" src="assets/Logo.png" alt="Logo"></a>
-                </div>
-                <div class="nav-menu">
-                    <ul class="nav-list">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Batik Definition</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Making Process</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Product Preview</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link">Documentation</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- Slideshow container -->
-<div class="slideshow-container fade">
+      <nav class="navbar">
+        <div class="nav-container">
+          <div class="nav-brand">
+            <a href="#" class="nav-logo"
+              ><img class="logo-kel" src="assets/Logo.png" alt="Logo"
+            /></a>
+          </div>
+          <div class="nav-menu">
+            <ul class="nav-list">
+              <li class="nav-item">
+                <a href="#" class="nav-link">Home</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Batik Definition</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Making Process</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Product Preview</a>
+              </li>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Documentation</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Slideshow container -->
+      <div class="slideshow-container fade">
+        <!-- Full images with numbers and message Info -->
+        <div class="Containers">
+          <div class="MessageInfo">1 / 3</div>
+          <img src="assets/gigs.jpeg" style="width: 100%" />
+          <div class="Info">First caption</div>
+        </div>
 
-    <!-- Full images with numbers and message Info -->
-    <div class="Containers">
-      <div class="MessageInfo">1 / 3</div>
-      <img src="assets/gigs.jpeg" style="width:100%">
-      <div class="Info">First caption</div>
-    </div>
-  
-    <div class="Containers">
-      <div class="MessageInfo">2 / 3</div>
-      <img src="assets/naufal.jpeg" style="width:100%">
-      <div class="Info">Second Caption</div>
-    </div>
-  
-    <div class="Containers">
-      <div class="MessageInfo">3 / 3</div>
-      <img src="assets/gigs.jpeg" style="width:100%">
-      <div class="Info">Third Caption</div>
-    </div>
-  
-    <!-- Back and forward buttons -->
-    <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="forward" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  <br>
-  
-  <!-- The circles/dots -->
-  <div style="text-align:center">
-    <span class="dots" onclick="currentSlide(1)"></span>
-    <span class="dots" onclick="currentSlide(2)"></span>
-    <span class="dots" onclick="currentSlide(3)"></span>
-  </div> 
+        <div class="Containers">
+          <div class="MessageInfo">2 / 3</div>
+          <img src="assets/naufal.jpeg" style="width: 100%" />
+          <div class="Info">Second Caption</div>
+        </div>
+
+        <div class="Containers">
+          <div class="MessageInfo">3 / 3</div>
+          <img src="assets/gigs.jpeg" style="width: 100%" />
+          <div class="Info">Third Caption</div>
+        </div>
+
+        <!-- Back and forward buttons -->
+        <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="forward" onclick="plusSlides(1)">&#10095;</a>
+      </div>
+      <br />
+
+      <!-- The circles/dots -->
+      <div style="text-align: center">
+        <span class="dots" onclick="currentSlide(1)"></span>
+        <span class="dots" onclick="currentSlide(2)"></span>
+        <span class="dots" onclick="currentSlide(3)"></span>
+      </div>
+
+      <div class="content">
+        <div class="content-title">
+          <img class="title-logo" src="assets/Title_Welcome.png" alt="Welcome title">
+        </div>
+        <div class="content-text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <div class="maps">
+            <img class="title-logo" src="assets/Location_Title.png" alt="Welcome title">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.13104265298!2d110.34275267428964!3d-7.775926777142146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a586d2f9d5295%3A0x38702e6fe155e1f0!2sGIG&#39;S%20Batik-%20Tempat%20Produksi%20Original%20Batik.%20Batik%20tulis%20%2C%20batik%20cap%2C%20dan%20kombinasi%20cap%20dan%20tulis!5e0!3m2!1sid!2sid!4v1702913153727!5m2!1sid!2sid" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+      <footer>
         
+      </footer>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
