--- a/home.html
+++ b/home.html
@@ -93,7 +93,29 @@
         </div>
       </div>
       <footer>
-        
+        <div class="foot-containers">
+          <div class="foot-socmed col-3">
+            <a href="#" class="socmed-link"
+              ><img class="socmed-logo" src="assets/instagram.png" alt="Instagram"
+            /></a>
+            <a href="#" class="socmed-link"
+              ><img class="socmed-logo" src="assets/facebook.png" alt="Facebook"
+            /></a>
+            <a href="#" class="socmed-link"
+              ><img class="socmed-logo" src="assets/twitter.png" alt="Twitter"
+            /></a>
+            <a href="#" class="socmed-link"
+              ><img class="socmed-logo" src="assets/whatsapp.png" alt="Twitter"
+            /></a>
+          </div>
+          <div class="foot-text col-3">
+            <p>
+              Kwarasan, Nogotirto, Kec. Gamping, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55592
+            </p>
+            <p>Phone : n/a </p>
+            <p>Email : n/a</p>
+          </div>
+        </div>
       </footer>
     </div>
     <script src="script.js"></script>
