halaman Dokumentasi(tinggal dirapihin)

--- a/home.html
+++ b/home.html
@@ -88,7 +88,7 @@
           </p>
         </div>
         <div class="maps">
-            <img class="title-logo" src="assets/Location_Title.png" alt="Welcome title">
+            <img class="title-logo" src="assets/Location_Title.png" alt="Location title">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3953.13104265298!2d110.34275267428964!3d-7.775926777142146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a586d2f9d5295%3A0x38702e6fe155e1f0!2sGIG&#39;S%20Batik-%20Tempat%20Produksi%20Original%20Batik.%20Batik%20tulis%20%2C%20batik%20cap%2C%20dan%20kombinasi%20cap%20dan%20tulis!5e0!3m2!1sid!2sid!4v1702913153727!5m2!1sid!2sid" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </div>
