--- a/doc.html
+++ b/doc.html
@@ -19,39 +19,32 @@
   <div class="con">
     <nav class="navbar">
       <div class="nav-container">
+        <!-- navbar kiri -->
         <div class="nav-brand">
-           <a href="#" class="nav-logo"
-              ><img class="logo-kel" src="assets/Logo.png" alt="Logo"
-           /></a>
+          <a href="#" class="nav-logo"
+            ><img class="logo-kel" src="assets/Logo.png" alt="Logo"
+          /></a>
         </div>
-       <div class="nav-menu">
-          <ul class="nav-list">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-          </li>
-            <li class="nav-item">
-              <a href="#" class="nav-link">Batik Definition</a>
-           </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Making Process</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Product Preview</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Documentation</a>
-          </li>
-         </ul>
-         </div>
-       </div>
-     </nav>
+        <!-- navbar tengah -->
+        <div class="nav-menu">
+          <!-- kuhapus ya list nya tang buat responsive -->
+          <a href="home.html" class="nav-link">Home</a>
+          <a href="#" class="nav-link">Batik Definition</a>
+          <a href="#" class="nav-link">Making Process</a>
+          <a href="#" class="nav-link">Product Preview</a>
+          <a href="doc.html" class="nav-link">Documentation</a>
+        </div>
+        <!-- hamburger menu -->
+          <a href="#" id="hamburger-menu"><img src="assets/Hamburger-menu.png" alt="" style="width: 2.4rem;"></i></a>
+      </div>
+    </nav>
 
     <!-- vidio dokumentasi -->
     <Section class="content">
       <div class="content-title">
-        <img class="title-logo" src="assets/Video title.png" alt="Vidio Documentation title">
       </div>
       <div class="content-vidio">
+        <img class="title-logo" src="assets/Video title.png" alt="Vidio Documentation title">
         <video controls autoplay>
           <source src="assets/vidDoc.mp4" type = "video/mp4">
         </video>
