--- a/home.html
+++ b/home.html
@@ -18,30 +18,23 @@
     <div class="con">
       <nav class="navbar">
         <div class="nav-container">
+          <!-- navbar kiri -->
           <div class="nav-brand">
             <a href="#" class="nav-logo"
               ><img class="logo-kel" src="assets/Logo.png" alt="Logo"
             /></a>
           </div>
+          <!-- navbar tengah -->
           <div class="nav-menu">
-            <ul class="nav-list">
-              <li class="nav-item">
-                <a href="#" class="nav-link">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Batik Definition</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Making Process</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Product Preview</a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">Documentation</a>
-              </li>
-            </ul>
+            <!-- kuhapus ya list nya tang buat responsive -->
+            <a href="home.html" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Batik Definition</a>
+            <a href="#" class="nav-link">Making Process</a>
+            <a href="#" class="nav-link">Product Preview</a>
+            <a href="doc.html" class="nav-link">Documentation</a>
           </div>
+          <!-- hamburger menu -->
+            <a href="#" id="hamburger-menu"><img src="assets/Hamburger-menu.png" alt="" style="width: 2.4rem;"></i></a>
         </div>
       </nav>
       <!-- Slideshow container -->
