--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             <a href="home.html" class="nav-link">Home</a>
             <a href="#" class="nav-link">Batik Definition</a>
             <a href="#" class="nav-link">Making Process</a>
-            <a href="#" class="nav-link">Product Preview</a>
+            <a href="productPrev.html" class="nav-link">Product Preview</a>
             <a href="doc.html" class="nav-link">Documentation</a>
           </div>
           <!-- hamburger menu -->
