mp step content

--- a/doc.html
+++ b/doc.html
@@ -29,7 +29,7 @@
         <div class="nav-menu">
           <!-- kuhapus ya list nya tang buat responsive -->
           <a href="home.html" class="nav-link">Home</a>
-          <a href="#" class="nav-link">Batik Definition</a>
+          <a href="bt.html" class="nav-link">Batik Definition</a>
           <a href="mp.html" class="nav-link">Making Process</a>
           <a href="#" class="nav-link">Product Preview</a>
           <a href="doc.html" class="nav-link">Documentation</a>
