--- a/mp.html
+++ b/mp.html
@@ -29,7 +29,7 @@
             <div class="nav-menu">
               <!-- kuhapus ya list nya tang buat responsive -->
               <a href="home.html" class="nav-link">Home</a>
-              <a href="#" class="nav-link">Batik Definition</a>
+              <a href="bt.html" class="nav-link">Batik Definition</a>
               <a href="mp.html" class="nav-link">Making Process</a>
               <a href="#" class="nav-link">Product Preview</a>
               <a href="doc.html" class="nav-link">Documentation</a>
@@ -58,7 +58,91 @@
                     <p>Pertama, Anda perlu menggambar motif pada kain menggunakan pensil atau kapur. Motif batik dapat bervariasi, mulai dari motif tradisional hingga motif modern yang lebih abstrak.</p>
                 </div>
             </div>
+            <div class="step-3">
+              <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+              <div class="step-text">
+                  <h1>3. Panaskan Malam</h1>
+                  <br>
+                  <p>Malam batik harus dipanaskan dalam panci hingga cair. Suhu yang tepat akan membuat malam menjadi lebih mudah digunakan dan mengalir dengan baik.</p>
+              </div>
+          </div>
+          <div class="step-4">
+            <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+            <div class="step-text">
+                <h1>4. Celupkan Canting</h1>
+                <br>
+                <p>Setelah malam cair, celupkan ujung canting ke dalam malam. Pastikan malam terisi dengan baik di dalam canting.</p>
+            </div>
+          </div>
+          <div class="step-5">
+            <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+            <div class="step-text">
+                <h1>5. Mulai Mencanting</h1>
+                <br>
+                <p>Gunakan canting untuk menggambar motif pada kain. Teknik mencanting melibatkan mengalirkan malam melalui ujung canting dan mengendalikannya dengan hati-hati untuk menghasilkan garis-garis yang diinginkan.</p>
+            </div>
         </div>
+        <div class="step-6">
+          <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+          <div class="step-text">
+              <h1>6. Warnai Kain (Teknik Celup)</h1>
+              <br>
+              <p>Setelah motif selesai dicanting, Anda dapat mulai mewarnai kain menggunakan pewarna batik. Pewarna dapat diterapkan dengan kuas atau dengan teknik celup.
+              </p>
+          </div>
+      </div>
+      <div class="step-7">
+        <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+        <div class="step-text">
+            <h1>7. Tiriskan Kain</h1>
+            <br>
+            <p>Setelah kain diwarnai, tiriskan kain untuk menghilangkan kelebihan pewarna. Anda dapat melakukannya dengan menggantung kain atau meletakkannya di atas rak pengering.</p>
+        </div>
+    </div>
+    <div class="step-8">
+      <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+      <div class="step-text">
+          <h1>8. Melorod</h1>
+          <br>
+          <p>Setelah kain dikeringkan, melorod dilakukan untuk menghilangkan malam yang masih menempel pada kain. Melorod melibatkan pemanasan kain dengan setrika atau dengan menggunakan metode tradisional seperti menempatkannya di atas tungku.</p>
+      </div>
+  </div>
+  <div class="step-9">
+    <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+    <div class="step-text">
+        <h1>9. Cuci kain batik</h1>
+        <br>
+        <p>Langkah terakhir adalah mencuci kain batik untuk menghilangkan sisa malam dan pewarna yang tidak terikat pada serat kain. Gunakan air bersih dan deterjen yang lembut untuk mencuci kain batik dengan hati-hati.</p>
+    </div>
+</div>
+        </div>
+            <!-- footer -->
+    <footer>
+      <div class="foot-containers">
+        <div class="foot-socmed col-3">
+          <a href="#" class="socmed-link"
+            ><img class="socmed-logo" src="assets/instagram.png" alt="Instagram"
+          /></a>
+          <a href="#" class="socmed-link"
+            ><img class="socmed-logo" src="assets/facebook.png" alt="Facebook"
+          /></a>
+          <a href="#" class="socmed-link"
+            ><img class="socmed-logo" src="assets/twitter.png" alt="Twitter"
+          /></a>
+          <a href="#" class="socmed-link"
+            ><img class="socmed-logo" src="assets/whatsapp.png" alt="Twitter"
+          /></a>
+        </div>
+        <div class="foot-text col-3">
+          <p>
+            Kwarasan, Nogotirto, Kec. Gamping, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55592
+          </p>
+          <p>Phone : n/a </p>
+          <p>Email : n/a</p>
+        </div>
+      </div>
+    </footer>
+
     </div>
     <script src="script.js"></script>
 </body>
