Responsive mp donnn

--- a/definition.html
+++ b/definition.html
@@ -30,8 +30,8 @@
               <!-- kuhapus ya list nya tang buat responsive -->
               <a href="home.html" class="nav-link">Home</a>
               <a href="definition.html" class="nav-link">Batik Definition</a>
-              <a href="#" class="nav-link">Making Process</a>
-              <a href="#" class="nav-link">Product Preview</a>
+              <a href="mp.html" class="nav-link">Making Process</a>
+              <a href="productPrev.html" class="nav-link">Product Preview</a>
               <a href="doc.html" class="nav-link">Documentation</a>
             </div>
             <!-- hamburger menu -->
@@ -44,8 +44,8 @@
         <div class="content-text">
             <h1>Apa itu batik?</h1>
             <p>
-              Batik adalah seni dan teknik tradisional pewarnaan tekstil yang berasal dari indonesia. Proses batik melibatkan aplikasi lilin panas pada kain, yang kemudian dicelupkan kedalam pewarna. Lilin tersebut mencegah warna menyerap ke area yang dilindungi, sehingga menciptakan pola atau desain khusus pada kain. Proses ini dapat 
-              diulang untuk mencapai kombinasi warna dan detail yang kompleks. Batik tidak hanya dianggap sebagai metode pewarnaan kain, tetapi juga sebagai bentuk seni dan warisan budaya yang memiliki nilai tinggi. Motif-motif batik sering mencerminkan kekayaan kultural dan filosofi masyarakat indonesia, dan setiap daerah di indonesia 
+              Batik adalah seni dan teknik tradisional pewarnaan tekstil yang berasal dari indonesia. Proses batik melibatkan aplikasi lilin panas pada kain, yang kemudian dicelupkan kedalam pewarna. Lilin tersebut mencegah warna menyerap ke area yang dilindungi, sehingga menciptakan pola atau desain khusus pada kain. Proses ini dapat
+              diulang untuk mencapai kombinasi warna dan detail yang kompleks. Batik tidak hanya dianggap sebagai metode pewarnaan kain, tetapi juga sebagai bentuk seni dan warisan budaya yang memiliki nilai tinggi. Motif-motif batik sering mencerminkan kekayaan kultural dan filosofi masyarakat indonesia, dan setiap daerah di indonesia
               dapat memiliki gaya batik yang khas. Batik digunakan untuk berbagai produk, termasuk pakaian,aksesoris, dan barang-barang dekoratif. UNESCO mengakui batik indonesia sebagai warisan budaya tak benda manusia pada tahun 2009.
             </p>
           </div>
