--- a/mp.html
+++ b/mp.html
@@ -31,7 +31,7 @@
               <a href="home.html" class="nav-link">Home</a>
               <a href="bt.html" class="nav-link">Batik Definition</a>
               <a href="mp.html" class="nav-link">Making Process</a>
-              <a href="#" class="nav-link">Product Preview</a>
+              <a href="productPrev.html" class="nav-link">Product Preview</a>
               <a href="doc.html" class="nav-link">Documentation</a>
             </div>
             <!-- hamburger menu -->
@@ -51,14 +51,14 @@
                 </div>
             </div>
             <div class="step-2">
-                <img src="assets/MP2.png" alt="Siapkan Alat dan Bahan">
+                <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
                 <div class="step-text">
                     <h1>2. Gambar motif pada kain</h1>
                     <br>
                     <p>Pertama, Anda perlu menggambar motif pada kain menggunakan pensil atau kapur. Motif batik dapat bervariasi, mulai dari motif tradisional hingga motif modern yang lebih abstrak.</p>
                 </div>
             </div>
-            <div class="step-3">
+            <div class="step-1">
               <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
               <div class="step-text">
                   <h1>3. Panaskan Malam</h1>
@@ -66,7 +66,7 @@
                   <p>Malam batik harus dipanaskan dalam panci hingga cair. Suhu yang tepat akan membuat malam menjadi lebih mudah digunakan dan mengalir dengan baik.</p>
               </div>
           </div>
-          <div class="step-4">
+          <div class="step-2">
             <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
             <div class="step-text">
                 <h1>4. Celupkan Canting</h1>
@@ -74,7 +74,7 @@
                 <p>Setelah malam cair, celupkan ujung canting ke dalam malam. Pastikan malam terisi dengan baik di dalam canting.</p>
             </div>
           </div>
-          <div class="step-5">
+          <div class="step-1">
             <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
             <div class="step-text">
                 <h1>5. Mulai Mencanting</h1>
@@ -82,7 +82,7 @@
                 <p>Gunakan canting untuk menggambar motif pada kain. Teknik mencanting melibatkan mengalirkan malam melalui ujung canting dan mengendalikannya dengan hati-hati untuk menghasilkan garis-garis yang diinginkan.</p>
             </div>
         </div>
-        <div class="step-6">
+        <div class="step-2">
           <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
           <div class="step-text">
               <h1>6. Warnai Kain (Teknik Celup)</h1>
@@ -91,7 +91,7 @@
               </p>
           </div>
       </div>
-      <div class="step-7">
+      <div class="step-1">
         <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
         <div class="step-text">
             <h1>7. Tiriskan Kain</h1>
@@ -99,7 +99,7 @@
             <p>Setelah kain diwarnai, tiriskan kain untuk menghilangkan kelebihan pewarna. Anda dapat melakukannya dengan menggantung kain atau meletakkannya di atas rak pengering.</p>
         </div>
     </div>
-    <div class="step-8">
+    <div class="step-2">
       <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
       <div class="step-text">
           <h1>8. Melorod</h1>
@@ -107,7 +107,7 @@
           <p>Setelah kain dikeringkan, melorod dilakukan untuk menghilangkan malam yang masih menempel pada kain. Melorod melibatkan pemanasan kain dengan setrika atau dengan menggunakan metode tradisional seperti menempatkannya di atas tungku.</p>
       </div>
   </div>
-  <div class="step-9">
+  <div class="step-1">
     <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
     <div class="step-text">
         <h1>9. Cuci kain batik</h1>
