--- a/doc.html
+++ b/doc.html
@@ -45,9 +45,11 @@
       </div>
       <div class="content-vidio">
         <img class="title-logo" src="assets/Video title.png" alt="Vidio Documentation title">
-        <video controls autoplay>
-          <source src="assets/vidDoc.mp4" type = "video/mp4">
-        </video>
+        <div class="vid">
+        <iframe class="videos"
+        src="https://www.youtube.com/embed/W70e8wZ8KF0">
+        </iframe>
+        </div>
       </div>
     </Section>
 
@@ -82,11 +84,11 @@
         </div>
 
         <div class="Containers">
-          <img src="assets/fotoKelompok-1.jpeg" style="width: 100%" />
+          <img src="assets/fotoKelompok-5.JPG" style="width: 100%" />
         </div>
 
         <div class="Containers">
-          <img src="assets/fotoKelompok-3.jpg" style="width: 100%" />
+          <img src="assets/fotoKelompok-4.JPG" style="width: 100%" />
         </div>
 
         <!-- Back and forward buttons -->
