text content fix

--- a/doc.html
+++ b/doc.html
@@ -60,7 +60,7 @@
       </div>
       <div class="content-text">
         <p>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, excepturi. Fugit minima cupiditate illum quia, at ipsam animi incidunt, tempore, praesentium exercitationem odio labore asperiores eos fuga modi accusamus nam nemo velit totam sapiente sunt? Eligendi necessitatibus nemo quo doloremque dolorum hic sed corrupti numquam quibusdam accusamus quidem, provident ad aperiam iste tenetur, rem nobis libero voluptatem harum! Soluta id ipsum corrupti fugit sit doloremque minima cumque possimus adipisci dignissimos.
+          Terima kasih telah mengunjungi halaman web kami. Kami berharap informasi yang kami sajikan telah bermanfaat bagi Anda. Jika Anda memiliki pertanyaan lebih lanjut atau membutuhkan bantuan tambahan, jangan ragu untuk menghubungi kami. Kami berkomitmen untuk terus meningkatkan layanan kami agar dapat memenuhi kebutuhan dan harapan Anda. Terima kasih atas kunjungan Anda dan sampai jumpa lagi.
         </p>
       </div>
     </section>
@@ -72,7 +72,7 @@
       </div>
       <div class="content-text">
         <p>
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, excepturi. Fugit minima cupiditate illum quia, at ipsam animi incidunt, tempore, praesentium exercitationem odio labore asperiores eos fuga modi accusamus nam nemo velit totam sapiente sunt? Eligendi necessitatibus nemo quo doloremque dolorum hic sed corrupti numquam quibusdam accusamus quidem, provident ad aperiam iste tenetur, rem nobis libero voluptatem harum! Soluta id ipsum corrupti fugit sit doloremque minima cumque possimus adipisci dignissimos.
+          Kami ingin mengucapkan permintaan maaf yang tulus jika ada ketidaknyamanan atau ketidak puasan yang Anda alami selama mengunjungi halaman web kami. Kami selalu berusaha untuk memberikan pengalaman yang terbaik kepada pengunjung kami, dan kami akan terus berupaya meningkatkan kualitas layanan kami. Terima kasih atas kesabaran dan pengertian Anda. Jika Anda memiliki masukan atau saran untuk kami, jangan ragu untuk menghubungi kami. Kami menghargai dukungan dan partisipasi Anda.
         </p>
       </div>
 
@@ -80,7 +80,7 @@
       <div class="slideshow-container fade">
         <!-- Full images with numbers and message Info -->
         <div class="Containers">
-          <img src="assets/fotoKelompok-2.jpeg" style="width: 100%" />
+          <img src="assets/fotoKelompok-4.jpg" style="width: 100%" />
         </div>
 
         <div class="Containers">
@@ -88,7 +88,7 @@
         </div>
 
         <div class="Containers">
-          <img src="assets/fotoKelompok-4.JPG" style="width: 100%" />
+          <img src="assets/fotoKelompok-2.jpeg" style="width: 100%" />
         </div>
 
         <!-- Back and forward buttons -->
