--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
         </div>
         <div class="content-text">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Sebuah toko batik yang terletak di Kwarasan, Nogotirto, Kec. Gamping, Kabupaten Sleman, Daerah Istimewa Yogyakarta. Gig's batik menyediakan berbagai macam batik seperti batik tradisional dan batik celup. selain menjual batik yang sudah jadi, Gig's Batik juga menyediakan layanan pemesanan batik, adapun bagi orang yang ingin belajar dan membuat batik, Gig's batik juga menyediakan pelayanan tersebut.
           </p>
         </div>
         <div class="maps">
