--- a/definition.html
+++ b/definition.html
@@ -39,7 +39,7 @@
           </div>
         </nav>
         <div class="content">
-            <img src="assets/fotoKelompok-1.jpeg" alt="">
+            <img src="assets/Definition.png" alt="">
         </div>
         <div class="content-text">
             <h1>Apa itu batik?</h1>
