--- a/mp.html
+++ b/mp.html
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="step-2">
-                <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+                <img src="assets/Gambarmotif.png" alt="Siapkan Alat dan Bahan">
                 <div class="step-text">
                     <h1>2. Gambar motif pada kain</h1>
                     <br>
@@ -59,7 +59,7 @@
                 </div>
             </div>
             <div class="step-1">
-              <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+              <img src="assets/Panaskanlilin.jpg" alt="Siapkan Alat dan Bahan">
               <div class="step-text">
                   <h1>3. Panaskan Malam</h1>
                   <br>
@@ -67,7 +67,7 @@
               </div>
           </div>
           <div class="step-2">
-            <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+            <img src="assets/Masukkancanting.jpg" alt="Siapkan Alat dan Bahan">
             <div class="step-text">
                 <h1>4. Celupkan Canting</h1>
                 <br>
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class="step-1">
-            <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+            <img src="assets/fotoKelompok-1.jpeg" alt="Siapkan Alat dan Bahan">
             <div class="step-text">
                 <h1>5. Mulai Mencanting</h1>
                 <br>
@@ -83,7 +83,7 @@
             </div>
         </div>
         <div class="step-2">
-          <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+          <img src="assets/Warnai.png" alt="Siapkan Alat dan Bahan">
           <div class="step-text">
               <h1>6. Warnai Kain (Teknik Celup)</h1>
               <br>
@@ -92,29 +92,23 @@
           </div>
       </div>
       <div class="step-1">
-        <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+        
+        <img src="assets/Mencuci.png" alt="Siapkan Alat dan Bahan">
         <div class="step-text">
-            <h1>7. Tiriskan Kain</h1>
+            <h1>7. Cuci kain batik</h1>
             <br>
-            <p>Setelah kain diwarnai, tiriskan kain untuk menghilangkan kelebihan pewarna. Anda dapat melakukannya dengan menggantung kain atau meletakkannya di atas rak pengering.</p>
+            <p>Kemudian mencuci kain batik untuk menghilangkan sisa malam dan pewarna yang tidak terikat pada serat kain. Gunakan air bersih dan deterjen yang lembut untuk mencuci kain batik dengan hati-hati.</p>
         </div>
     </div>
     <div class="step-2">
-      <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
+      <img src="assets/Tiriskan.JPG" alt="Siapkan Alat dan Bahan">
       <div class="step-text">
-          <h1>8. Melorod</h1>
+          <h1>8. Tiriskan Kain</h1>
           <br>
-          <p>Setelah kain dikeringkan, melorod dilakukan untuk menghilangkan malam yang masih menempel pada kain. Melorod melibatkan pemanasan kain dengan setrika atau dengan menggunakan metode tradisional seperti menempatkannya di atas tungku.</p>
+          <p>Setelah kain dicuci, tiriskan kain untuk menghilangkan kelebihan pewarna. Anda dapat melakukannya dengan menggantung kain atau meletakkannya di atas rak pengering.</p>
       </div>
   </div>
-  <div class="step-1">
-    <img src="assets/MP1.png" alt="Siapkan Alat dan Bahan">
-    <div class="step-text">
-        <h1>9. Cuci kain batik</h1>
-        <br>
-        <p>Langkah terakhir adalah mencuci kain batik untuk menghilangkan sisa malam dan pewarna yang tidak terikat pada serat kain. Gunakan air bersih dan deterjen yang lembut untuk mencuci kain batik dengan hati-hati.</p>
-    </div>
-</div>
+
         </div>
             <!-- footer -->
     <footer>
