--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="home.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Quattrocento Sans"
@@ -88,16 +88,13 @@
       <footer>
         <div class="foot-containers">
           <div class="foot-socmed col-3">
-            <a href="#" class="socmed-link"
+            <a href="https://www.instagram.com/gigs_batik/" class="socmed-link"
               ><img class="socmed-logo" src="assets/instagram.png" alt="Instagram"
             /></a>
-            <a href="#" class="socmed-link"
+            <a href="https://m.facebook.com/p/Gigs-Batik-100054252530396/" class="socmed-link"
               ><img class="socmed-logo" src="assets/facebook.png" alt="Facebook"
             /></a>
-            <a href="#" class="socmed-link"
-              ><img class="socmed-logo" src="assets/twitter.png" alt="Twitter"
-            /></a>
-            <a href="#" class="socmed-link"
+            <a href="https://wa.me/628170425841" class="socmed-link"
               ><img class="socmed-logo" src="assets/whatsapp.png" alt="Twitter"
             /></a>
           </div>
@@ -105,7 +102,7 @@
             <p>
               Kwarasan, Nogotirto, Kec. Gamping, Kabupaten Sleman, Daerah Istimewa Yogyakarta 55592
             </p>
-            <p>Phone : n/a </p>
+            <p>Phone : +628170425841 </p>
             <p>Email : n/a</p>
           </div>
         </div>
