--- a/home.html
+++ b/home.html
@@ -42,19 +42,19 @@
         <!-- Full images with numbers and message Info -->
         <div class="Containers">
           <div class="MessageInfo">1 / 3</div>
-          <img src="assets/gigs.jpeg" style="width: 100%" />
+          <img src="assets/carousel-3.JPG" style="width: 100%" />
           <div class="Info">First caption</div>
         </div>
 
         <div class="Containers">
           <div class="MessageInfo">2 / 3</div>
-          <img src="assets/naufal.jpeg" style="width: 100%" />
+          <img src="assets/carousel-1.jpg" style="width: 100%" />
           <div class="Info">Second Caption</div>
         </div>
 
         <div class="Containers">
           <div class="MessageInfo">3 / 3</div>
-          <img src="assets/gigs.jpeg" style="width: 100%" />
+          <img src="assets/carousel-2.JPG" style="width: 100%" />
           <div class="Info">Third Caption</div>
         </div>
 
