--- a/home.html
+++ b/home.html
@@ -43,19 +43,19 @@
         <div class="Containers">
           <div class="MessageInfo">1 / 3</div>
           <img src="assets/carousel-3.JPG" style="width: 100%" />
-          <div class="Info">First caption</div>
+          <div class="Info"></div>
         </div>
 
         <div class="Containers">
           <div class="MessageInfo">2 / 3</div>
           <img src="assets/carousel-1.jpg" style="width: 100%" />
-          <div class="Info">Second Caption</div>
+          <div class="Info"></div>
         </div>
 
         <div class="Containers">
           <div class="MessageInfo">3 / 3</div>
           <img src="assets/carousel-2.JPG" style="width: 100%" />
-          <div class="Info">Third Caption</div>
+          <div class="Info"></div>
         </div>
 
         <!-- Back and forward buttons -->
